Refactor build to use sbt-kubuszok 0.2.0 conventions
- Bump sbt-kubuszok from 0.1.0 to 0.2.0
- Replace SsgSettings.scala with sbt-kubuszok built-ins (DevProperties,
  Aliases, KubuszokRootPlugin, commonSettings via MatrixAction)
- Use Aliases(published, compileOnly) API: ssg aggregator is compileOnly
  (no tests, avoids Scala Native OOM from linking all 2500+ classes)
- Use lazy val for all projectMatrix declarations (fixes forward
  reference NPE when modules are ordered alphabetically)
- Move platform-specific deps into MatrixAction.ForPlatforms inside
  someVariations (jvmPlatform/jsPlatform/nativePlatform calls don't
  apply settings when someVariations already created the rows)
- Add .aggregate(*.projectRefs) to root project for ci-release
- Add mimaSettings to all modules
- Reorder ported modules alphabetically in declarations and aliases